# rm_test

./: CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
app/algorithms/control/: slidingmodec.h
app/channels/: uart_raw_frame_queue.cpp  uart_raw_frame_queue.h
app/debug/: CMakeLists.txt
app/modules/: modules_registry.cpp
app/modules/arm/: arm_module.cpp  arm_module.h
app/modules/chassis/: chassis_module.cpp  chassis_module.h
app/modules/gantry/: gantry_module.cpp  gantry_module.h
app/modules/gimbal/: gimbal_module.cpp  gimbal_module.h
app/modules/referee/: referee_module.cpp  referee_module.h
app/modules/remote_input/: remote_input_module.cpp  remote_input_module.h
app/modules/rgb_led/: rgb_led_module.cpp  rgb_led_module.h
app/protocols/mcu_link/: mcu_link.cpp  mcu_link.h
app/protocols/motors/: cubemars_motor_protocol.cpp  dji_motor_protocol.cpp  dji_motor_protocol.h  dm_motor_protocol.cpp
app/services/actuator/: actuator_service.cpp  actuator_service.h
boards/hpmicro/hpm6e00evk_v2/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.hpm6e00evk_v2  board.c  board.cmake  board.yml  hpm6e00evk_v2-pinctrl.dtsi  hpm6e00evk_v2.dts  hpm6e00evk_v2.yaml  hpm6e00evk_v2_defconfig  pre_dt_board.cmake
bootstrap/: bootstrap.h
bootstrap/src/: bootstrap.cpp  module_manager.cpp
channels/: arm_command_channel.cpp  arm_command_channel.h  arm_state_channel.cpp  can_raw_frame_queue.cpp  chassis_command_channel.cpp  chassis_state_channel.cpp  gantry_command_channel.cpp  gantry_command_channel.h  gimbal_command_channel.cpp  gimbal_command_channel.h  gimbal_state_channel.cpp  imu_channel.cpp  motor_feedback_channel.cpp  referee_state_channel.cpp  remote_input_channel.cpp  system_status_channel.cpp  uart_raw_frame_queue.cpp
conf/: README.md  systemview.conf
debug/shell/: chassis_tuning_shell.cpp  mavlink_mode_shell.cpp
docs/: ARCHITECTURE_REVIEW.md  DIRECTORY_RESTRUCTURE_PLAN.md
modules/: modules_registry.cpp
modules/arm/: arm_module.cpp  arm_module.h
modules/chassis/: chassis_module.cpp  chassis_module.h
modules/gantry/: gantry_module.cpp  gantry_module.h
modules/gimbal/: gimbal_module.cpp  gimbal_module.h
modules/referee/: referee_module.cpp  referee_module.h
modules/remote_input/: remote_input_module.cpp  remote_input_module.h
modules/sys_state/: sys_state_module.cpp  sys_state_module.h
platform/drivers/: CMakeLists.txt
platform/drivers/communication/: can_dispatch.cpp  can_dispatch.h  uart_dispatch.cpp
platform/drivers/devices/actuators/: serial_servo.cpp  serial_servo.h
platform/drivers/devices/system/: referee_client.h
protocols/motors/: cubemars_motor_protocol.cpp  dji_motor_protocol.cpp  dji_motor_protocol.h  dm_motor_protocol.cpp
protocols/pc_link/: pc_link.cpp
protocols/remote_input/: dr16_protocol.cpp  vt03_protocol.cpp
services/actuator/: actuator_service.cpp
services/chassis/: chassis_tuning_service.cpp
services/runtime/: runtime_init_service.cpp
src/: CMakeLists.txt  app_main.cpp  main.cpp
tools/: build_local.sh  smoke_regression.sh
